# my_game_engine

./: .gitignore  CMakeLists.txt  README.md  makefile
blender/: asteroid.blend  asteroid.blend1
cmake/modules/: FindGLFW3.cmake
src/: bloom.cpp  collision.cpp  engine.cpp  instance.cpp  light.cpp  main.cpp  objloader.cpp  postProcessing.cpp  taa.cpp  testGame.cpp
src/asteroids/: asteroid.hpp  bullet.hpp  game.cpp  logic.hpp  skybox.hpp  spaceship.hpp
src/demos/asteroids/: asteroids.cpp  game.cpp  logic.hpp
src/demos/sponza/: game.cpp  sponza.cpp
src/headers/: camera.hpp  engine.hpp  gameobject.hpp  instance.hpp  libraries.hpp  material.hpp  mesh.hpp  model.hpp  physics.hpp  uniform.hpp  vertex.hpp
src/headers/ecs/: collision.hpp  component.hpp  ecsManager.hpp  entity.hpp  lightInstance.hpp  modelInstance.hpp  rigidbody.hpp  system.hpp  transform.hpp
src/headers/graphics/: bloom.hpp  camera.hpp  instance.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  objloader.hpp  postProcessing.hpp  skybox.hpp  taa.hpp  uniform.hpp  vertex.hpp
src/shaders/: bloom.frag  bullet.frag  bullet.vert  camera.glsl  fullscreen.vert  fullscreenLight.frag  fullscreenLight.vert  hdrColourCorrection.frag  light.frag  light.glsl  mvp.vert  pbr.frag  shadowMapLight.frag  sharpen.frag  skybox.frag  skybox.vert  taa.frag  test.frag  test.vert
